--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.14.5",
-        "autoprefixer": "^10.3.7",
+        "@babel/preset-react": "^7.13.13",
+        "@headlessui/react": "^1.2.0",
+        "@inertiajs/inertia": "^0.9.0",
+        "@inertiajs/inertia-react": "^0.6.0",
+        "@inertiajs/progress": "^0.2.4",
+        "@tailwindcss/forms": "^0.3.2",
+        "autoprefixer": "^10.2.4",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.3.9",
+        "postcss": "^8.2.13",
+        "postcss-import": "^14.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "tailwindcss": "^2.2.16"
+        "tailwindcss": "^2.1.2"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.10.1",
