--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@tailwindcss/forms": "^0.3.4",
         "autoprefixer": "^10.2.4",
         "axios": "^0.21",
+        "dayjs": "^1.10.7",
         "laravel-mix": "^6.0.31",
         "lodash": "^4.17.19",
         "postcss": "^8.2.13",
