--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "mews/purifier": "^3.3",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
