--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,20 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "inertiajs/inertia-laravel": "^0.3.5",
-        "laravel/framework": "^8.54",
+        "inertiajs/inertia-laravel": "^0.5.2",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "mews/purifier": "^3.3",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.4",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.8"
     },
     "autoload": {
